# pg_query_builder

./: Cargo.toml  Taskfile.yml  docker-compose.yml
pqb/: Cargo.toml
pqb/src/: count.rs  filter.rs  lib.rs  op.rs  order.rs  qb.rs  select.rs  table.rs  update.rs
pqb/tests/: postgres.rs  tokio_postgres.rs
pqb_cli/: Cargo.toml
pqb_cli/src/: cli.rs  main.rs
src/: filter.rs  lib.rs  meta.rs  op.rs  qb.rs
